--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,7 @@
 #HEADERS = program.h headers.h
 
+# Definindo a diretiva _LINUX
+CFLAGS=-D_LINUX
 MYESPEAK=-lespeak
 SOURCE= fala.c
 TARGET= srvfalar
@@ -9,7 +11,7 @@ default: all
 all: clean compile install
 
 compile:
-	gcc -g $(SOURCE) $(MYESPEAK) -o $(TARGET)
+	gcc -g $(CFLAGS) $(SOURCE) $(MYESPEAK) -o $(TARGET)
 
 install:
 	cp  $(TARGET) /usr/bin/ 
