--- a/srvfalar/etc/speech-dispatcher/speechd.conf
+++ b/srvfalar/etc/speech-dispatcher/speechd.conf
@@ -214,16 +214,17 @@ AddModule "espeak"       "sd_espeak"   "espeak.conf"
 AddModule "angelotts"    "sd_generic"    "angelotts-generic.conf"
 AddModule "maricotatts"    "sd_generic"    "maricotatts-generic.conf"
 AddModule "nordestinotts"    "sd_generic"    "nordestinotts-generic.conf"
-#AddModule "festival"     "sd_festival"  "festival.conf"
-#AddModule "flite"        "sd_flite"     "flite.conf"
+AddModule "guglinatts"    "sd_generic"    "guglinatts-generic.conf"
+AddModule "festival"     "sd_festival"  "festival.conf"
+AddModule "flite"        "sd_flite"     "flite.conf"
 #AddModule "ivona"	 "sd_ivona"    "ivona.conf"
 #AddModule "espeak-generic" "sd_generic" "espeak-generic.conf"
-#AddModule "espeak-ng-mbrola-generic" "sd_generic" "espeak-mbrola-generic.conf"
+AddModule "espeak-ng-mbrola-generic" "sd_generic" "espeak-mbrola-generic.conf"
 #AddModule "swift-generic" "sd_generic" "swift-generic.conf"
-#AddModule "epos-generic" "sd_generic"   "epos-generic.conf"
-#AddModule "dtk-generic"  "sd_generic"   "dtk-generic.conf"
+AddModule "epos-generic" "sd_generic"   "epos-generic.conf"
+AddModule "dtk-generic"  "sd_generic"   "dtk-generic.conf"
 #AddModule "ibmtts"       "sd_ibmtts"    "ibmtts.conf"
-#AddModule "cicero"        "sd_cicero"     "cicero.conf"
+AddModule "cicero"        "sd_cicero"     "cicero.conf"
 
 # DO NOT REMOVE the following line unless you have
 # a specific reason -- this is the fallback output module
@@ -247,12 +248,13 @@ AddModule "dummy"         "sd_dummy"      ""
 # for specified languages.
 
 
-#LanguageDefaultModule "pt"  "angelotts-generic"
-#LanguageDefaultModule "pt"  "maricotatts-generic"
-#LanguageDefaultModule "pt"  "nordestinotts-generic"
-#LanguageDefaultModule "en"  "espeak"
-#LanguageDefaultModule "cs"  "festival"
-#LanguageDefaultModule "es"  "festival"
+LanguageDefaultModule "pt"  "guglinatts-generic"
+LanguageDefaultModule "pt"  "angelotts-generic"
+LanguageDefaultModule "pt"  "maricotatts-generic"
+LanguageDefaultModule "pt"  "nordestinotts-generic"
+LanguageDefaultModule "en"  "espeak"
+LanguageDefaultModule "cs"  "festival"
+LanguageDefaultModule "es"  "festival"
 
 # -----CLIENT SPECIFIC CONFIGURATION-----
 
