--- a/srvfalar/DEBIAN/control
+++ b/srvfalar/DEBIAN/control
@@ -1,6 +1,6 @@
 Package: srvfalar
 Version: 1.3
-Depends:  mysql-common, espeak, espeak-data, libespeak-dev, espeak-ng, speech-dispatcher ,orca, onboard
+Depends:  espeak, espeak-data, libespeak-dev, espeak-ng, speech-dispatcher ,orca, onboard, ffmpeg, libnotify, python2-notify, perl-libwww, perl-www-mechanize, perl-html-tree, sox ,fmt, lame, perl-www-curl
 Section: eletronic
 Priority: optional
 Architecture: all
