--- a/srvfalar/DEBIAN/control
+++ b/srvfalar/DEBIAN/control
@@ -1,10 +1,11 @@
 Package: srvfalar
 Version: 1.3
-Depends:  espeak, espeak-data, libespeak-dev, espeak-ng, speech-dispatcher ,orca, onboard, ffmpeg, libnotify, python2-notify, perl-libwww, perl-www-mechanize, perl-html-tree, sox ,fmt, lame, perl-www-curl
+Depends:  espeak, espeak-data, libespeak-dev, espeak-ng, speech-dispatcher ,orca, onboard, ffmpeg, libnotify, python2-notify, perl-libwww, perl-www-mechanize, perl-html-tree, sox ,fmt, lame, perl-www-curl, libttspico-utils, libttspico-dev
+Description: Server TTS (Text to Speech) , need client toolfalar or similar.
 Section: eletronic
 Priority: optional
 Architecture: all
 Essential: no
 Installed-Size: 1024
 Maintainer: maurinsoft.com.br
-Description: srvfalar , robotinics project
+
