--- a/src/srvFalar.vcxproj.filters
+++ b/src/srvFalar.vcxproj.filters
@@ -19,4 +19,22 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="C:\Program Files (x86)\Microsoft SDKs\Speech\v11.0\Include\sapi.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="srvFalar.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\..\..\..\..\Program Files (x86)\eSpeak\espeak_sapi.dll">
+      <Filter>Header Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
